--- a/cars.html
+++ b/cars.html
@@ -21,3 +21,155 @@
             <a href="teams.html">Teams</a>
         </nav>
     </header>
+
+    <main>
+
+    <div class="teams-cars">
+
+        <figure>
+            <h2>Redbull Racing</h2>
+            <picture>
+                <img src="images/red-bull-racing-rb20.webp" alt="Redbull Car 2024" width="500" loading="lazy">
+            </picture>
+            <figcaption>Red Bull Racing RB20</figcaption>
+
+            <p>The Red Bull Racing RB20 is a Formula 1 car designed and built by Red Bull Racing for the 2024 Formula One World Championship. It was driven by Max Verstappen and Sergio Pérez, making its competitive debut at the 2024 Bahrain Grand Prix.
+                The RB20 is powered by the Honda RBPTH002 power unit, featuring a turbocharged 1.6-liter V6 engine producing approximately 740 horsepower, paired with an 8-speed automatic paddle-operated gearbox.
+                Initially, the RB20 demonstrated dominant performance, but as the season progressed, it faced increased competition from teams like McLaren and Ferrari. Despite these challenges, Max Verstappen secured the Drivers' Championship, while Red Bull finished third in the Constructors' Championship.</p>
+
+        </figure>
+
+        <figure>
+            <h2>Mercedes</h2>
+            <picture>
+                <img src="images/mercedes-f1-w15.webp" alt="Mercedes Car 2024" width="500" loading="lazy">
+            </picture>
+            <figcaption>Mercedes W15</figcaption>
+
+            <p>The Mercedes-AMG F1 W15 E Performance, commonly known as the Mercedes W15, is a Formula One car designed and built by the Mercedes-AMG Petronas F1 Team for the 2024 Formula One World Championship. It marked the return of James Allison as Technical Director and was driven by Lewis Hamilton and George Russell. Notably, this was Hamilton's final Mercedes car before his move to Ferrari in 2025.
+                The W15 featured significant design changes, including a revised sidepod shape and a switch from pull-rod to push-rod suspension, aiming to address the handling issues of its predecessor, the W14. The car sported a predominantly black livery with a silver nose cone and teal accents from title sponsor Petronas.
+                Throughout the 2024 season, the W15 secured four race victories, four pole positions, and nine podium finishes. Russell claimed wins at the Austrian and Las Vegas Grands Prix, while Hamilton triumphed at the British and Belgian Grands Prix. Despite these successes, Mercedes concluded the season fourth in the Constructors' Championship, marking their lowest finish since 2012.
+                The season also had challenges, such as George Russell’s disqualification from the Belgian Grand Prix due to his car being underweight, which subsequently awarded the victory to Hamilton.
+                In summary, the W15 represented a transitional phase for Mercedes, combining notable achievements with areas identified for improvement in future campaigns.</p>
+        </figure>
+
+        <figure>
+            <h2>Ferrari</h2>
+            <picture>
+                <img src="images/ferrari-sf-24.webp" alt="Ferrari Car 2024" width="500" loading="lazy">
+            </picture>
+            <figcaption>Ferrari SF-24</figcaption>
+
+            <p>The Ferrari SF-24 is a Formula One car designed and constructed by Scuderia Ferrari for the 2024 Formula One World Championship. It was driven by Charles Leclerc and Carlos Sainz Jr., with Oliver Bearman substituting for Sainz during the Saudi Arabian Grand Prix. The SF-24 made its competitive debut at the 2024 Bahrain Grand Prix.
+                In terms of performance, the SF-24 secured five race victories, 22 podium finishes, four pole positions, and four fastest laps over 24 races. The car achieved its first win at the Australian Grand Prix and its last win at the Mexico City Grand Prix.
+                The SF-24 represents Ferrari's third car of the new ground effect generation, featuring significant design changes aimed at improving handling and performance. The design team, led by Enrico Cardile, focused on creating a car that is easy to drive and reacts predictably, building upon the positive feedback from drivers in the latter part of the previous season.
+                Visually, the SF-24 maintains Ferrari's traditional red livery, complemented by white and yellow accents on the nose and sides. These design elements mark a departure from the previous two years, giving the car a distinct appearance for the 2024 season.
+                Overall, the SF-24 demonstrated competitive performance throughout the 2024 season, contributing to Ferrari's ongoing efforts to contend for championship titles in Formula One.</p>
+        </figure>
+
+        <figure>
+            <h2>Mclaren</h2>
+            <picture>
+                <img src="images/mclaren-mcl38.webp" alt="Meclaren Car 2024" width="500" loading="lazy">
+            </picture>
+            <figcaption>Mclaren MCL38</figcaption>
+
+            <p>The McLaren MCL38 is a Formula One car designed and constructed by McLaren for the 2024 Formula One World Championship. The car was driven by Lando Norris, in his sixth season with the team, and Oscar Piastri, in his second. Both drivers achieved their first Grand Prix victories with the MCL38.
+                The MCL38 made its competitive debut at the 2024 Bahrain Grand Prix and proved to be a significant improvement over its predecessor, the MCL60. An early upgrade package enhanced its performance in slow-speed corners, addressing a long-standing weakness of McLaren cars. Throughout the season, the MCL38 secured six race victories, 21 podium finishes, eight pole positions, and seven fastest laps, leading McLaren to clinch their first Constructors' Championship since 1998.
+                The car featured a carbon fibre composite chassis, with a front suspension comprising carbon fibre and titanium pullrod suspension legs operating an inboard torsion bar and damper system, and a rear suspension with pushrod suspension legs. It was powered by the Mercedes-AMG F1 M15 E Performance 1.6L direct injection V6 turbocharged engine, paired with kinetic and thermal energy recovery systems.
+                The MCL38's success marked McLaren's return to the forefront of Formula One, showcasing the team's engineering prowess and strategic acumen throughout the 2024 season.</p>
+        </figure>
+
+        <figure>
+            <h2>Aston Martin</h2>
+            <picture>
+                <img src="images/aston-martin-amr24.webp" alt="Aston Martin Car 2024" width="500" loading="lazy">
+            </picture>
+            <figcaption>Aston Martin AMR24</figcaption>
+
+            <p>The Aston Martin AMR24 is a Formula One car designed and developed by the Aston Martin Aramco Formula One Team for the 2024 Formula One World Championship. It is the fourth car produced by Aston Martin since their return to the sport in 2021. The AMR24 was driven by two-time world champion Fernando Alonso and Lance Stroll throughout the 2024 season.
+                The AMR24 features a new chassis, front wing, nose, suspension, and floor, all designed to enhance aerodynamic efficiency and overall performance. The car is powered by the Mercedes-AMG F1 M15 1.6L V6 turbocharged engine, paired with an energy recovery system. It utilizes a Mercedes F1 eight-speed, semi-automatic transmission.
+                In terms of performance, the AMR24 did not achieve any podium finishes during the 2024 season. Despite the team's efforts, the car struggled to match the pace of leading competitors, resulting in a fifth-place finish in the Constructors' Championship, mirroring their position from the previous year.
+                The AMR24's livery maintained Aston Martin's iconic racing green, with increased branding from title sponsor Aramco on the sidepods, front wing, and rear wing. The design also incorporated more exposed carbon fiber elements to reduce weight, a common trend among teams in the 2024 season.
+                Overall, while the AMR24 showcased several technical advancements, it faced challenges in achieving top-tier results during the 2024 Formula One World Championship.</p>
+        </figure>
+
+        <figure>
+            <h2>Alpine</h2>
+            <picture>
+                <img src="images/alpine-a524.webp" alt="Alpine Car 2024" width="500" loading="lazy">
+            </picture>
+            <figcaption>Alpine A524</figcaption>
+
+            <p>The Alpine A524 is a Formula One car designed and developed by the BWT Alpine F1 Team for the 2024 Formula One World Championship. It represents the fourth entry by Alpine since rebranding from Renault. The car was driven by Pierre Gasly and Esteban Ocon throughout the season, with Jack Doohan stepping in for Ocon at the season finale after Ocon concluded his tenure with the team early.
+                The A524 is powered by the Renault E-Tech RE24 engine, a 1.6-liter direct injection V6 turbocharged unit, complemented by kinetic and thermal energy recovery systems. The car features a double wishbone push-rod suspension system on both the front and rear, designed to enhance handling and performance.
+                Throughout the 2024 season, the A524 participated in 24 races, achieving two podium finishes and securing one fastest lap. Notably, the team recorded its first double podium at the São Paulo Grand Prix and achieved its inaugural fastest lap at the United States Grand Prix. Despite these milestones, the car did not secure any race victories or pole positions during the season.
+                The A524's livery maintained Alpine's signature blue and pink color scheme, in partnership with title sponsor BWT. The team utilized an all-pink livery for select races, including the final three events of the season. Additionally, special liveries were introduced to promote partnerships, such as a Deadpool-themed design for the Belgian Grand Prix and an Indiana Jones-themed livery for the United States Grand Prix.
+                In summary, the Alpine A524 demonstrated moments of promise during the 2024 Formula One season, achieving notable firsts for the team. However, it faced challenges in consistently competing at the front of the grid, highlighting areas for development in future campaigns.</p>
+        </figure>
+
+        <figure>
+            <h2>Williams</h2>
+            <picture>
+                <img src="images/williams-racing-fw46.webp" alt="Williams Car 2024" width="500" loading="lazy">
+            </picture>
+            <figcaption>Williams FW46</figcaption>
+
+            <p>The Williams FW46 is a Formula One car designed and constructed by Williams Racing for the 2024 Formula One World Championship. The car was driven by Alexander Albon and Logan Sargeant at the start of the season. Midway through the season, Sargeant was replaced by Franco Colapinto, who competed in the final nine races.
+                The FW46 was unveiled on February 5, 2024, featuring a livery similar to its predecessors, the FW44 and FW45. Notably, it was the first Williams car to incorporate an on-wheel multi-function display, moving away from the previous chassis-mounted displays.
+                In an effort to modernize their manufacturing processes, Williams initially produced certain components of the FW46 using metal instead of the traditional carbon fiber. This approach led to the car exceeding the weight limit, resulting in a performance deficit of approximately 0.45 seconds per lap. Additionally, the use of metal parts increased the severity of damage during crashes.
+                Throughout the 2024 season, the FW46 faced several challenges, including multiple on-track incidents. The team scored a total of 17 points, with a notable double-points finish at the Azerbaijan Grand Prix, where Albon and Colapinto finished seventh and eighth respectively. This achievement marked the first time an Argentine driver scored points in Formula One since 1982.
+                For the Mexico City and São Paulo Grands Prix, Williams introduced a special livery to commemorate their partnership with Mercado Libre, an Argentine online marketplace. This collaboration was established following the signing of Franco Colapinto.
+                In summary, the Williams FW46 represented a season of transition and adaptation for the team, with efforts to modernize their processes and integrate new talent into their driver lineup.</p>
+        </figure>
+
+        <figure>
+            <h2>Visa Cash App RB</h2>
+            <picture>
+                <img src="images/vcarb-01.webp" alt="V Carb Car 2024" width="500" loading="lazy">
+            </picture>
+            <figcaption>VRCARB 01</figcaption>
+
+            <p>The RB VCARB 01 is a Formula One car constructed by RB for the 2024 Formula One World Championship. It is the first chassis built and designed by the team. The car was driven by Daniel Ricciardo and Yuki Tsunoda, with Liam Lawson replacing Ricciardo for the final six races of the season after his departure following the Singapore Grand Prix.
+                The VCARB 01 features a bold blue livery with red accents, reminiscent of the team's Toro Rosso days. This design choice marks a departure from the previous AlphaTauri branding, signaling a return to the team's earlier aesthetic.
+                The car is powered by a Honda engine, delivering approximately 1,080 horsepower. It utilizes a double wishbone suspension system and weighs around 798 kilograms.
+                During the 2024 season, the VCARB 01 participated in 24 races but did not secure any wins or podium finishes. The team achieved one fastest lap during the season.
+                The VCARB 01 was officially unveiled in Las Vegas, with the team expressing optimism for the upcoming season. The launch event highlighted the car's new livery and design philosophy.
+                In summary, the RB VCARB 01 represents a new chapter for the team, combining a nostalgic livery with modern engineering to compete in the 2024 Formula One World Championship.</p>
+        </figure>
+
+        <figure>
+            <h2>Sauber</h2>
+            <picture>
+                <img src="images/sauber-c44.webp" alt="Sauber Car 2024" width="500" loading="lazy">
+            </picture>
+            <figcaption>Kick Sauber C44</figcaption>
+
+            <p>The Kick Sauber C44 is a Formula One car designed and constructed by the Stake F1 Team, also known as Kick Sauber, for the 2024 Formula One World Championship. It marked the team's first entry following the conclusion of their partnership with Alfa Romeo in 2023. The car was driven by Valtteri Bottas and Zhou Guanyu, both in their third and final year with the team.
+                Under the guidance of Technical Director James Key, who joined the team in August 2023, the C44 was developed as a virtually new car, sharing only some components at its rear with its predecessor, the Alfa Romeo C43. The design incorporated a shift towards Red Bull's design philosophy, featuring pull-rod front suspension, downward-sloping sidepods, and squared-off radiator inlets. The car continued to utilize a Ferrari power unit and transmission, with the latter housed in a Sauber-designed casing.
+                The departure of Alfa Romeo as a title sponsor led to a striking new livery for the C44, featuring a fluorescent green and black color scheme, reflecting the branding of new title sponsors Stake and Kick. In regions where gambling sponsorships are prohibited, the Stake logos were replaced by Kick's branding.
+                Throughout the 2024 season, the C44 faced challenges in performance and reliability, resulting in the team finishing last in the World Constructors' Championship standings. The car struggled with tire management, particularly in efficiently heating the tires during both qualifying and race sessions. Despite numerous upgrades introduced during the season, the C44's performance remained suboptimal. The team's only points came at the Qatar Grand Prix, where Zhou Guanyu finished eighth, marking the team's highest finish of the season.
+                In summary, the Kick Sauber C44 represented a significant transition for the team, introducing new design philosophies and branding. However, it faced considerable challenges in competitiveness and reliability throughout the 2024 Formula One season.</p>
+        </figure>
+
+
+        <figure>
+            <h2>Haas</h2>
+            <picture>
+                <img src="images/haas-vf-24-livery.webp" alt="Haas Car 2024" width="500" loading="lazy">
+            </picture>
+            <figcaption>Haas VF-24</figcaption>
+
+            <p>The Haas VF-24 is a Formula One car designed and constructed by the Haas F1 Team for the 2024 Formula One World Championship. The car was driven by Kevin Magnussen and Nico Hülkenberg, both in their final year with the team. Reserve driver Oliver Bearman also participated in four practice sessions and two Grands Prix, substituting for Magnussen during the Azerbaijan Grand Prix due to a one-race ban and again at the São Paulo Grand Prix when Magnussen was unwell.
+                The VF-24 is powered by the Ferrari 066/10 power unit, a turbocharged 1.6-liter V6 hybrid engine. The chassis is constructed from a carbon-fiber and honeycomb composite structure, with carbon-fiber bodywork. The car features independent front and rear suspension systems.
+                In terms of performance, the VF-24 showed improvement over its predecessor. It secured one fastest lap and achieved a highest finish of sixth place, accomplished twice by Hülkenberg at the Austrian and British Grands Prix.
+                In October 2024, Haas announced a multi-year technical partnership with Toyota. This collaboration aims to enhance Haas's competitiveness by leveraging Toyota Gazoo Racing's expertise, knowledge, and resources. The partnership includes the sharing of technical and manufacturing services and the development of talent across drivers, engineers, and mechanics.
+                Overall, the Haas VF-24 represented a step forward for the team in the 2024 season, with notable performances and a significant partnership to bolster future development.</p>
+        </figure>
+    </div>
+
+    </main>
+
+    <footer><p>aaaaa</p></footer>
+
+</body>
