--- a/teams.html
+++ b/teams.html
@@ -17,7 +17,15 @@
         <nav>
             <a href="subject.html">Home</a>
             <a href="cars.html">Cars</a>
-            <a href="pilots.html">Pilots</a>
             <a href="teams.html">Teams</a>
         </nav>
     </header>
+
+
+    <div class="team-f1">
+        <h2>Red Bull Racing</h2>
+
+
+    
+    </div>
+</body>
