--- a/cars.html
+++ b/cars.html
@@ -28,9 +28,9 @@
         <figure>
             <h2>Redbull Racing</h2>
             <picture>
-                <source srcset="images/red-bull-racing-rb20.webp" media="(min-width: 1000px)">
-                <source srcset="images/red-bull-racing-rb20-medium.webp" media="(min-width: 500px)">
-                <img src="images/red-bull-racing-rb20-small.webp" alt="Redbull Car 2024" width="500" loading="lazy">
+                <source srcset="images/red-bull-racing-rb20-medium" media="(min-width: 1000px)">
+                <source srcset="images/red-bull-racing-rb20-small.webp" media="(min-width: 500px)">
+                <img src="images/red-bull-racing-rb20.webp" alt="Redbull Car 2024" width="500" loading="lazy">
             </picture>
             <figcaption>Red Bull Racing RB20</figcaption>
 
@@ -43,6 +43,8 @@
         <figure>
             <h2>Mercedes</h2>
             <picture>
+                <source srcset="images/mercedes-f1-w15-medium" media="(min-width: 1000px)">
+                <source srcset="images/mercedes-f1-w15-small.webp" media="(min-width: 500px)">
                 <img src="images/mercedes-f1-w15.webp" alt="Mercedes Car 2024" width="500" loading="lazy">
             </picture>
             <figcaption>Mercedes W15</figcaption>
