--- a/cars.html
+++ b/cars.html
@@ -28,7 +28,7 @@
         <figure>
             <h2>Redbull Racing</h2>
             <picture>
-                <source srcset="images/red-bull-racing-rb20-medium" media="(min-width: 1000px)">
+                <source srcset="images/red-bull-racing-rb20-medium.webp" media="(min-width: 1000px)">
                 <source srcset="images/red-bull-racing-rb20-small.webp" media="(min-width: 500px)">
                 <img src="images/red-bull-racing-rb20.webp" alt="Redbull Car 2024" width="500" loading="lazy">
             </picture>
@@ -43,7 +43,7 @@
         <figure>
             <h2>Mercedes</h2>
             <picture>
-                <source srcset="images/mercedes-f1-w15-medium" media="(min-width: 1000px)">
+                <source srcset="images/mercedes-f1-w15-medium.webp" media="(min-width: 1000px)">
                 <source srcset="images/mercedes-f1-w15-small.webp" media="(min-width: 500px)">
                 <img src="images/mercedes-f1-w15.webp" alt="Mercedes Car 2024" width="500" loading="lazy">
             </picture>
@@ -59,6 +59,8 @@
         <figure>
             <h2>Ferrari</h2>
             <picture>
+                <source srcset="images/" media="(min-width: 1000px)">
+                <source srcset="images/" media="(min-width: 500px)">
                 <img src="images/ferrari-sf-24.webp" alt="Ferrari Car 2024" width="500" loading="lazy">
             </picture>
             <figcaption>Ferrari SF-24</figcaption>
