--- a/cars.html
+++ b/cars.html
@@ -59,8 +59,8 @@
         <figure>
             <h2>Ferrari</h2>
             <picture>
-                <source srcset="images/" media="(min-width: 1000px)">
-                <source srcset="images/" media="(min-width: 500px)">
+                <source srcset="images/ferrari-sf-24-medium.webp" media="(min-width: 1000px)">
+                <source srcset="images/ferrari-sf-24-small.webp" media="(min-width: 500px)">
                 <img src="images/ferrari-sf-24.webp" alt="Ferrari Car 2024" width="500" loading="lazy">
             </picture>
             <figcaption>Ferrari SF-24</figcaption>
@@ -75,6 +75,8 @@
         <figure>
             <h2>Mclaren</h2>
             <picture>
+                <source srcset="images/mclaren-mcl38-medium.webp" media="(min-width: 1000px)">
+                <source srcset="images/mclaren-mcl38-small.webp" media="(min-width: 500px)">
                 <img src="images/mclaren-mcl38.webp" alt="Meclaren Car 2024" width="500" loading="lazy">
             </picture>
             <figcaption>Mclaren MCL38</figcaption>
