--- a/cars.html
+++ b/cars.html
@@ -26,7 +26,7 @@
     <div class="teams-cars">
 
         <figure>
-            <h2>Redbull Racing</h2>
+            <h2>Red Bull Racing</h2>
             <picture>
                 <source srcset="images/red-bull-racing-rb20-medium.webp" media="(min-width: 1000px)">
                 <source srcset="images/red-bull-racing-rb20-small.webp" media="(min-width: 500px)">
@@ -90,6 +90,8 @@
         <figure>
             <h2>Aston Martin</h2>
             <picture>
+                <source srcset="images/aston-martin-amr24-medium.webp" media="(min-width: 1000px)">
+                <source srcset="images/aston-martin-amr24-small.webp" media="(min-width: 500px)">
                 <img src="images/aston-martin-amr24.webp" alt="Aston Martin Car 2024" width="500" loading="lazy">
             </picture>
             <figcaption>Aston Martin AMR24</figcaption>
@@ -104,6 +106,8 @@
         <figure>
             <h2>Alpine</h2>
             <picture>
+                <source srcset="images/alpine-a524-medium.webp" media="(min-width: 1000px)">
+                <source srcset="images/alpine-a524-small.webp" media="(min-width: 500px)">
                 <img src="images/alpine-a524.webp" alt="Alpine Car 2024" width="500" loading="lazy">
             </picture>
             <figcaption>Alpine A524</figcaption>
@@ -118,6 +122,8 @@
         <figure>
             <h2>Williams</h2>
             <picture>
+                <source srcset="images/williams-racing-fw46-medium.webp" media="(min-width: 1000px)">
+                <source srcset="images/williams-racing-fw46-small.webp" media="(min-width: 500px)">
                 <img src="images/williams-racing-fw46.webp" alt="Williams Car 2024" width="500" loading="lazy">
             </picture>
             <figcaption>Williams FW46</figcaption>
@@ -133,6 +139,8 @@
         <figure>
             <h2>Visa Cash App RB</h2>
             <picture>
+                <source srcset="images/vcarb-01-medium.webp" media="(min-width: 1000px)">
+                <source srcset="images/vcarb-01-small.webp" media="(min-width: 500px)">
                 <img src="images/vcarb-01.webp" alt="V Carb Car 2024" width="500" loading="lazy">
             </picture>
             <figcaption>VRCARB 01</figcaption>
@@ -148,6 +156,8 @@
         <figure>
             <h2>Sauber</h2>
             <picture>
+                <source srcset="images/sauber-c44-medium.webp" media="(min-width: 1000px)">
+                <source srcset="images/sauber-c44-small.webp" media="(min-width: 500px)">
                 <img src="images/sauber-c44.webp" alt="Sauber Car 2024" width="500" loading="lazy">
             </picture>
             <figcaption>Kick Sauber C44</figcaption>
@@ -163,6 +173,8 @@
         <figure>
             <h2>Haas</h2>
             <picture>
+                <source srcset="images/haas-vf-24-livery-medium.webp" media="(min-width: 1000px)">
+                <source srcset="images/haas-vf-24-livery-small.webp" media="(min-width: 500px)">
                 <img src="images/haas-vf-24-livery.webp" alt="Haas Car 2024" width="500" loading="lazy">
             </picture>
             <figcaption>Haas VF-24</figcaption>
