--- a/cars.html
+++ b/cars.html
@@ -34,9 +34,12 @@
             </picture>
             <figcaption>Red Bull Racing RB20</figcaption>
 
+            <div class="information">
+
             <p>The Red Bull Racing RB20 is a Formula 1 car designed and built by Red Bull Racing for the 2024 Formula One World Championship. It was driven by Max Verstappen and Sergio Pérez, making its competitive debut at the 2024 Bahrain Grand Prix.
                 The RB20 is powered by the Honda RBPTH002 power unit, featuring a turbocharged 1.6-liter V6 engine producing approximately 740 horsepower, paired with an 8-speed automatic paddle-operated gearbox.
                 Initially, the RB20 demonstrated dominant performance, but as the season progressed, it faced increased competition from teams like McLaren and Ferrari. Despite these challenges, Max Verstappen secured the Drivers' Championship, while Red Bull finished third in the Constructors' Championship.</p>
+            </div>
 
         </figure>
 
@@ -49,12 +52,16 @@
             </picture>
             <figcaption>Mercedes W15</figcaption>
 
+            <div class="information">
+
             <p>The Mercedes-AMG F1 W15 E Performance, commonly known as the Mercedes W15, is a Formula One car designed and built by the Mercedes-AMG Petronas F1 Team for the 2024 Formula One World Championship. It marked the return of James Allison as Technical Director and was driven by Lewis Hamilton and George Russell. Notably, this was Hamilton's final Mercedes car before his move to Ferrari in 2025.
                 The W15 featured significant design changes, including a revised sidepod shape and a switch from pull-rod to push-rod suspension, aiming to address the handling issues of its predecessor, the W14. The car sported a predominantly black livery with a silver nose cone and teal accents from title sponsor Petronas.
                 Throughout the 2024 season, the W15 secured four race victories, four pole positions, and nine podium finishes. Russell claimed wins at the Austrian and Las Vegas Grands Prix, while Hamilton triumphed at the British and Belgian Grands Prix. Despite these successes, Mercedes concluded the season fourth in the Constructors' Championship, marking their lowest finish since 2012.
                 The season also had challenges, such as George Russell’s disqualification from the Belgian Grand Prix due to his car being underweight, which subsequently awarded the victory to Hamilton.
                 In summary, the W15 represented a transitional phase for Mercedes, combining notable achievements with areas identified for improvement in future campaigns.</p>
-        </figure>
+            </div>
+        
+            </figure>
 
         <figure>
             <h2>Ferrari</h2>
@@ -65,11 +72,14 @@
             </picture>
             <figcaption>Ferrari SF-24</figcaption>
 
+            <div class="information">
+
             <p>The Ferrari SF-24 is a Formula One car designed and constructed by Scuderia Ferrari for the 2024 Formula One World Championship. It was driven by Charles Leclerc and Carlos Sainz Jr., with Oliver Bearman substituting for Sainz during the Saudi Arabian Grand Prix. The SF-24 made its competitive debut at the 2024 Bahrain Grand Prix.
                 In terms of performance, the SF-24 secured five race victories, 22 podium finishes, four pole positions, and four fastest laps over 24 races. The car achieved its first win at the Australian Grand Prix and its last win at the Mexico City Grand Prix.
                 The SF-24 represents Ferrari's third car of the new ground effect generation, featuring significant design changes aimed at improving handling and performance. The design team, led by Enrico Cardile, focused on creating a car that is easy to drive and reacts predictably, building upon the positive feedback from drivers in the latter part of the previous season.
                 Visually, the SF-24 maintains Ferrari's traditional red livery, complemented by white and yellow accents on the nose and sides. These design elements mark a departure from the previous two years, giving the car a distinct appearance for the 2024 season.
                 Overall, the SF-24 demonstrated competitive performance throughout the 2024 season, contributing to Ferrari's ongoing efforts to contend for championship titles in Formula One.</p>
+            </div>
         </figure>
 
         <figure>
