--- a/cars.html
+++ b/cars.html
@@ -5,8 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>F1 Information</title>
     <meta name="author" content="Norlando Junior">
-    <meta name="description" content="This site talks about Formula 1 cars and drivers for the 2024 season.">
-    <link rel="stylesheet" href="styles/subject.css">
+    <meta name="description" content="This site talks about Formula 1 cars and your construction in season 2024">
     <link rel="stylesheet" href="styles/subject-large.css">
 </head>
 
