--- a/teams.html
+++ b/teams.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>F1 Information</title>
     <meta name="author" content="Norlando Junior">
-    <meta name="description" content="This site talks about Formula 1 cars and drivers for the 2024 season.">
+    <meta name="description" content="This site talks about Formula 1 Teams and your history">
     <link rel="stylesheet" href="styles/subject.css">
     <link rel="stylesheet" href="styles/subject-large.css">
 </head>
