--- a/cars.html
+++ b/cars.html
@@ -6,6 +6,7 @@
     <title>F1 Information</title>
     <meta name="author" content="Norlando Junior">
     <meta name="description" content="This site talks about Formula 1 cars and your construction in season 2024">
+    <link rel="stylesheet" href="styles/subject.css">
     <link rel="stylesheet" href="styles/subject-large.css">
 </head>
 
@@ -198,6 +199,11 @@
 
     </main>
 
-    <footer><p>aaaaa</p></footer>
+    <footer>
+        <p>&copy; <span id="currentyear"></span> 👾 Norlando Santos Barbosa Junior 👾 Brazil. </p>
+        <p id="lastModified"></p>
+        <script src="scripts/getdates.js"></script>
+        <script src="scripts/getdates.js" defer></script>
+   </footer>
 
 </body>
