--- a/cars.html
+++ b/cars.html
@@ -8,6 +8,7 @@
     <meta name="description" content="This site talks about Formula 1 cars and your construction in season 2024">
     <link rel="stylesheet" href="styles/subject.css">
     <link rel="stylesheet" href="styles/subject-large.css">
+    <script src="scripts/subject.js" defer></script>
 </head>
 
 <body>
