--- a/subject.html
+++ b/subject.html
@@ -9,7 +9,7 @@
     
     <link rel="stylesheet" href="styles/subject.css">
     <link rel="stylesheet" href="styles/subject-small.css">
-    <link src="scripts/subject.js" defer>
+    <script src="scripts/subject.js" defer></script>
 </head>
 
 <body>
@@ -76,6 +76,7 @@
             <input type="submit" value="Stay informed!">
         </div>
     </form>
+
 
 
     <footer>
