--- a/teams.html
+++ b/teams.html
@@ -8,7 +8,7 @@
     <meta name="description" content="This site talks about Formula 1 Teams and your history">
     <link rel="stylesheet" href="styles/subject.css">
     <link rel="stylesheet" href="styles/subject-large.css">
-    <link src="scripts/subject.js" defer>
+    <script src="scripts/subject.js" defer></script>
 </head>
 
 <body>
