--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <a href="https://www.linkedin.com/in/norlando-junior-0190a4341/">Linkedin</a>
             <a href="https://byupw.instructure.com/">Canvas</a>
             <a href="https://www.churchofjesuschrist.org/study/scriptures/ot/isa/43?lang=eng">Scripture</a>
-            <a href="#FinalProject">Final Project</a>
+            <a href="subject.html">Final Project</a>
         </nav>
     </header>
     
